--- a/src/scss/reset.scss
+++ b/src/scss/reset.scss
@@ -46,7 +46,7 @@ body {
 	line-height:1;
 	font-size:1.6rem;
 	-webkit-text-size-adjust:none;
-	background:#244964;
+	background:#f0e5de;
 }
 
 @media screen and (max-width: 1280px){
