--- a/src/scss/reset.scss
+++ b/src/scss/reset.scss
@@ -39,7 +39,7 @@ html {font-size:62.5%; /*height:calc(100% - 70px);*/}
 
 @import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css);
 @import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-jp.css);
-@import url(http://fonts.googleapis.com/earlyaccess/notosanskr.css);
+@import url(https://fonts.googleapis.com/earlyaccess/notosanskr.css);
 
 body {
 	font-family: 'Spoqa Han Sans', 'Spoqa Han Sans JP', 'Noto Sans KR', 'Sans-serif';
